added InnerClasses attribute